--- a/views/stock.hbs
+++ b/views/stock.hbs
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Admin Page</title>
+		<title>Stock Page</title>
 		<meta name="description" content="form to add new books">
 		<meta name="author" content="Josh Taylor">
 		<meta name="viewport" content= "width=device-width, initial-scale=1.0">
@@ -12,16 +12,20 @@
 	</head>
 	<body>
 		<header>
-			<h1>Admin</h1>
+			<h1>Stock Levels</h1>
 			{{#if authorised}}
 				<a href="/logout">Log out</a>
 			{{else}}
-				<a href="/login">Log in</a>
+				{{#if admin}}
+                    <a href="/add_stock">Add Stock</a>
+					<a href="/logout">Log out</a>
+				{{else}}
+					<a href="/login">Log in</a>
+				{{/if}}
 			{{/if}}
-            <a href="/stock">Stock Levels</a>
 		</header>
 	<main>
-		<p>This is the admin page. Only administrator users can see this.</p>
+		<p>This is the stock levels page.</p>
 		{{#if authorised}}
 			<p><a href="/foo">Foo Bar</a></p>
 		{{/if}}
