--- a/views/add_stock.hbs
+++ b/views/add_stock.hbs
@@ -43,8 +43,8 @@
 			<p name="trade_value">VALUE: <p class="trade_value"></p></p>
 			<input class="retail_price" type="range" min="1" max="100" name="retail_price"/>
 			<p name="retail_value">VALUE: <p class="retail_value"></p></p>
-			<input class="trade_price" type="range" min="1" max="100" name="trade_price"/>
-			<p name="trade_value">VALUE: <p class="trade_value"></p></p>
+			<input class="quantity" type="range" min="1" max="100" name="quantity"/>
+			<p name="quantity">VALUE: <p class="quantity"></p></p>
         </form>
 	</main>
 	</body>
