--- a/views/stock.hbs
+++ b/views/stock.hbs
@@ -24,7 +24,7 @@
 				{{/if}}
 			{{/if}}
 		</header>
-	<main style="max-width: 100%; height: 100%;">
+	<main style="max-width: 100%; height: 100%; flex-direction: row; display: flex; flex-wrap: wrap;">
 		{{#each sub_data}}
 			<section class="stock_level">
 				<p>ISBN: {{this.isbn}}</p>
