--- a/views/home.hbs
+++ b/views/home.hbs
@@ -25,11 +25,13 @@
 				{{/if}}
 			{{/if}}
 		</header>
-	<main>
-		<p>This is the home page. Users can see it without logging in.</p>
-		{{#if authorised}}
-			<p><a href="/foo">Foo Bar</a></p>
-		{{/if}}
+	<main style="max-width: 100%; height: 100%; flex-direction: row; display: flex; flex-wrap: wrap;">
+		{{#each sub_data}}
+			<section class="home_stock">
+				<p>NAME: {{this.book_title}}</p>
+				<figure><img src="{{this.filepath}}" alt="Book Cover"/></figure>
+			</section>
+		{{/each}}
 	</main>
 	</body>
 </html>
