--- a/views/home.hbs
+++ b/views/home.hbs
@@ -26,12 +26,24 @@
 			{{/if}}
 		</header>
 	<main style="max-width: 100%; height: 100%; flex-direction: row; display: flex; flex-wrap: wrap;">
-		{{#each sub_data}}
+		{{#if authorised}}
+			{{#each sub_data}}
 			<section class="home_stock">
 				<p>NAME: {{this.book_title}}</p>
 				<figure><img src="{{this.filepath}}" alt="Book Cover"/></figure>
+                <form class="home_form" method="post" action="/">
+					<input type="hidden" name="isbn" value="{{this.isbn}}"/>
+                    <input type="submit" value="Add to cart"/>
+                </form>
 			</section>
-		{{/each}}
+			{{/each}}
+		{{else}}
+			{{#if admin}}
+				<p>Admins can only see the stock, cannot purchase the stock but can manage the stock on the 'STOCK LEVELS' screen.</p>
+			{{else}}
+				<p>WELCOME TO THE HOME SCREEN!</p>
+			{{/if}}
+		{{/if}}
 	</main>
 	</body>
 </html>
