--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,10 +16,11 @@
 			<h1>Home</h1>
 			{{#if authorised}}
 				<a href="/logout">Log out</a>
+				<a href="#" style="margin: 0;padding: 0;margin-right: 3vw;background-color: #ccc;border: none; height: 100%; display: flex; justify-content: center; align-items: center; "><figure><img src="./uploads/cart.png" alt="Cart Icon" style="width: 60px; height: 60px; margin-top: 0.5vw;"/></figure></a>
 			{{else}}
 				{{#if admin}}
-					<a href="/stock">Stock Levels</a>
 					<a href="/logout">Log out</a>
+					<a href="/stock">Stock Levels</a>
 				{{else}}
 					<a href="/login">Log in</a>
 				{{/if}}
