--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,8 +16,8 @@
 			<h1>Home</h1>
 			{{#if authorised}}
 				<a href="/logout">Log out</a>
-				<a href="#" style="margin: 0;padding: 0;margin-right: 3vw;background-color: #ccc;border: none; height: 100%; display: flex; justify-content: center; align-items: center; "><figure><img src="./uploads/cart.png" alt="Cart Icon" style="width: 60px; height: 60px; margin-top: 0.5vw;"/></figure></a>
-				<p>{{this.counter}}</p>
+				<a href="#" style="margin: 0;padding: 0;margin-right: 3vw;background-color: #ccc;border: none; height: 95%; display: flex; justify-content: center; align-items: center; "><figure><p style="position:absolute; color: red; width: 4%; height: 10%; margin: 0; padding-bottom: 2vw; font-weight: bold; font-size: 1.75vw;">{{this.counter}}</p><img src="./uploads/cart.png" alt="Cart Icon" style="width: 60px; height: 60px; margin-top: 0.5vw;"/></figure></a>
+				<p style="margin: 0;width: 80%;padding: 3vw;height: 100%;text-align: right;margin-right: 0;">£{{this.price}}.00<p>
 			{{else}}
 				{{#if admin}}
 					<a href="/logout">Log out</a>
