--- a/public/style.css
+++ b/public/style.css
@@ -410,3 +410,49 @@ section.home_stock {
 .home_form > input:hover {
 	cursor: pointer;
 }
+
+.cart {
+	height: 60%;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	border: 2px solid black;
+	margin-bottom: 2vw;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+}
+
+.cart > figure img {
+	height: 90%;
+	width: 60%;
+	padding: 1vw;
+	margin-left: 3vw;
+}
+
+.cart > figure {
+	margin: 0;
+	height: 100%;
+	width: 30%;
+}
+
+.cart > p {
+	margin: 0;
+	padding: 1vw;
+	width: 70%;
+	height: 10%;
+}
+
+.cart > form {
+	display: flex;
+	justify-content: flex-end;
+	width: 70%;
+	height: 20%;
+
+}
+
+.cart > form input {
+	margin: 0;
+	padding: 1vw;
+	margin-right: 1vw;
+}
