problem is now fixed and feature 4 is now completed

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -40,7 +40,7 @@
                     </form>
                 </section>
             {{/each}}
-			<form method="post" action="/">
+			<form method="post" action="/cart">
 					<input type="submit" value="CANCEL CART"/>
 					<input type="hidden" value="*" name="record"/>
 			</form>
