doing some UAT testing and finalising unit tests

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -27,7 +27,7 @@
 		</header>
         <main style="max-width: 100%;margin: auto; margin-top: 2em;padding: 2em; background-color: lightgray;height: 50em; overflow-y: scroll; overflow-x: hidden;"> 
                 <p>HERE ARE ALL THE ITEMS YOU HAVE ADDED!</p>
-                <p>TOTAL: £{{this.price}}.00</p>
+                <p style="font-weight: bolder;">TOTAL: £{{this.price}}.00</p>
 				{{#each record_data}}
                 <section class="cart">
                     <figure><img src="{{this.filepath}}" alt="book cover"/></figure>
