--- a/views/home.hbs
+++ b/views/home.hbs
@@ -27,6 +27,8 @@
 						<a href="/login">Log in</a>
 					{{/if}}
 				{{/if}}
+            {{else}}
+                <a href="/cookie">Manage Cookies</a>
 			{{/if}}
 		</header>
 	<main style="max-width: 100%; height: 100%; flex-direction: row; display: flex; flex-wrap: wrap;">
