--- a/views/cookie.hbs
+++ b/views/cookie.hbs
@@ -14,7 +14,7 @@
 		<header style= "opacity: 20%;">
 			<h1>Home</h1>
 		</header>
-	<p class="cookie_container">
+	<p class="policy_container">
 		<figure><img class="cookie_exit" src="./uploads/close.png" alt="exit"/></figure>
 	</p>
 	<main style="max-width: 60%; height: 100%; display: flex; justify-content:center; flex-direction: row; display: flex; flex-wrap: wrap;">
