privacy mostly done

--- a/views/cookie.hbs
+++ b/views/cookie.hbs
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Cookies</title>
+		<title>Policies</title>
 		<meta name="description" content="form to add new books">
 		<meta name="author" content="Mark Tyers">
 		<meta name="viewport" content= "width=device-width, initial-scale=1.0">
